final edits pt 1

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,8 +6,7 @@
 	</head>
 	<body>
 		<!--TODO WebController Redirect index to student list eventually-->
-		<a href="viewAll">View All Students</a><br />
-		
+		<a href="/viewAll">View All Students</a><br/>
 		
 	</body>
 </html>
