--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,10 +3,35 @@
 	<head>
 	<meta charset="ISO-8859-1">
 	<title>Course Compass Home Page</title>
+	<style>
+		a{
+			text-decoration: none;
+		}
+		.button {
+        	display: inline-block;
+        	padding: 10px 20px;
+        	background-color: #007bff;
+        	color: #fff;
+        	border: none;
+        	border-radius: 5px;
+        	cursor: pointer;
+        	font-size: 16px;
+        	transition: background-color 0.3s ease;
+    	}
+		.button:hover {
+        	background-color: #0056b3; 
+    	}
+
+		.container {
+        text-align: center;
+    	}
+	</style>
 	</head>
 	<body>
-		<!--TODO WebController Redirect index to student list eventually-->
-		<a href="/viewAll">View All Students</a><br/>
+		<div class="container">
+			<h1>Welcome To CourseCompass!</h1>
 		
+			<a href="/viewAll" class="button">Get Started</a>
+		</div>
 	</body>
 </html>
