updated css into single file

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,30 +2,8 @@
 <html>
 	<head>
 	<meta charset="ISO-8859-1">
+	<link rel="stylesheet" href="/style-sheet.css"/>
 	<title>Course Compass Home Page</title>
-	<style>
-		a{
-			text-decoration: none;
-		}
-		.button {
-        	display: inline-block;
-        	padding: 10px 20px;
-        	background-color: #007bff;
-        	color: #fff;
-        	border: none;
-        	border-radius: 5px;
-        	cursor: pointer;
-        	font-size: 16px;
-        	transition: background-color 0.3s ease;
-    	}
-		.button:hover {
-        	background-color: #0056b3; 
-    	}
-
-		.container {
-        text-align: center;
-    	}
-	</style>
 	</head>
 	<body>
 		<div class="container">
